--- a/ethereum-rar-demo/src/main/webapp/keys/read-contract.xhtml
+++ b/ethereum-rar-demo/src/main/webapp/keys/read-contract.xhtml
@@ -18,16 +18,18 @@
         <h:body>
             <h1>Read contract</h1>
             <h:form>
-                <h:panelGrid columns="2">
+                <h:panelGrid columns="3">
                     <h:outputText value="From:"/>
-                    <h:inputText value="#{ethereumDemoKeysController.selectedAddress}" size="60"/>
+                    <h:inputText id="from" value="#{ethereumDemoKeysController.selectedAddress}" size="60" required="true"/>
+                    <h:message for="from" errorStyle="color:red;"/>
 
                     <h:outputText value="Contract address:"/>
-                    <h:inputText value="#{ethereumDemoKeysController.contractAddress}" size="60"/>
+                    <h:inputText id="contractAddress" value="#{ethereumDemoKeysController.contractAddress}" size="60" required="true"/>
+                    <h:message for="contractAddress" errorStyle="color:red;"/>
                 </h:panelGrid>
                 <h:panelGrid columns="2">
                     <h:commandButton value="Invoke" action="#{ethereumDemoKeysController.readDemoContract}"/>
-                    <h:commandButton value="Back" action="/keys/read-contract-result"/>
+                    <h:commandButton value="Back" action="/keys/read-contract-result" immediate="true"/>
                 </h:panelGrid>
             </h:form>
         </h:body>
