demo: info page

--- a/ethereum-rar-demo/src/main/webapp/gas-price.xhtml
+++ b/ethereum-rar-demo/src/main/webapp/gas-price.xhtml
@@ -17,6 +17,7 @@
         </h:head>
 
         <h:body>
+            <h1>Gas Prices</h1>
             <h:messages errorStyle="color:red;" infoStyle="color:blue;"/>
             <h:form>
                 <h:panelGrid columns="2">
