--- a/ethereum-rar-demo/src/main/webapp/index.xhtml
+++ b/ethereum-rar-demo/src/main/webapp/index.xhtml
@@ -19,6 +19,7 @@
             <h1>Ethereum JCA Resource Adapter Demo Web Application</h1>
             <h:form>
                 <h:panelGrid columns="1">
+                    <h:commandButton value="Information" action="/info"/>
                     <h:commandButton value="Get Gas Price" action="/gas-price"/>
                     <h:commandButton value="Send Raw Transaction" action="/raw/index"/>
                     <h:commandButton value="Get Transaction Confirmation" action="/confirm/index"/>
