initial work on CDI util library with transaction manager

--- a/ethereum-rar-demo/src/main/webapp/index.xhtml
+++ b/ethereum-rar-demo/src/main/webapp/index.xhtml
@@ -23,6 +23,7 @@
                     <h:commandButton value="Get Gas Price" action="/gas-price"/>
                     <h:commandButton value="Send Raw Transaction" action="/raw/index"/>
                     <h:commandButton value="Get Transaction Confirmation" action="/confirm/index"/>
+                    <h:commandButton value="Transaction Manager" action="/transactions"/>
                     <h:commandButton value="Accounts" action="/accounts/index"/>
                     <h:commandButton value="Keys" action="/keys/index"/>
                 </h:panelGrid>
