--- a/ethereum-rar-demo/src/main/webapp/accounts/unlock.xhtml
+++ b/ethereum-rar-demo/src/main/webapp/accounts/unlock.xhtml
@@ -1,36 +1,34 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml"
-      xmlns:f="http://java.sun.com/jsf/core"
       xmlns:h="http://java.sun.com/jsf/html">
 
-    <f:view>
-        <h:head>
-            <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-            <meta http-equiv="Content-Script-Type" content="text/javascript" />
-            <meta http-equiv="Content-Style-Type" content="text/css" />
-            <meta http-equiv="Expires" content="-1" />
-            <meta http-equiv="Cache-Control"
-                  content="no-cache, no-store, max-age=0, must-revalidate" />
-            <meta http-equiv="Pragma" content="no-cache" />
-            <title>Ethereum Resource Adapter Demo Web Application</title>
-        </h:head>
+    <h:head>
+        <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+        <meta http-equiv="Content-Script-Type" content="text/javascript" />
+        <meta http-equiv="Content-Style-Type" content="text/css" />
+        <meta http-equiv="Expires" content="-1" />
+        <meta http-equiv="Cache-Control"
+              content="no-cache, no-store, max-age=0, must-revalidate" />
+        <meta http-equiv="Pragma" content="no-cache" />
+        <title>Ethereum Resource Adapter Demo Web Application</title>
+    </h:head>
 
-        <h:body>
-            <h1>Unlock Account</h1>
-            <h:form>
-                <h:panelGrid columns="2">
-                    <h:outputText value="Account"/>
-                    <h:inputText value="#{ethereumDemoAccountController.selectedAccount}" size="60"/>
+    <h:body>
+        <h1>Unlock Account</h1>
+        <h:messages errorStyle="color:red;" infoStyle="color:blue;" globalOnly="true"/>
+        <h:form>
+            <h:panelGrid columns="2">
+                <h:outputText value="Account"/>
+                <h:inputText value="#{ethereumDemoAccountController.selectedAccount}" size="60"/>
 
-                    <h:outputText value="Password"/>
-                    <h:inputSecret value="#{ethereumDemoAccountController.password}"/>
-                </h:panelGrid>
-                <h:panelGrid columns="2">
-                    <h:commandButton value="Unlock" action="#{ethereumDemoAccountController.doUnlock}"/>
-                    <h:commandButton value="Back" action="/accounts/index"/>
-                </h:panelGrid>
-            </h:form>
-        </h:body>
-    </f:view>
+                <h:outputText value="Password"/>
+                <h:inputSecret value="#{ethereumDemoAccountController.password}"/>
+            </h:panelGrid>
+            <h:panelGrid columns="2">
+                <h:commandButton value="Unlock" action="#{ethereumDemoAccountController.doUnlock}"/>
+                <h:commandButton value="Back" action="/accounts/index"/>
+            </h:panelGrid>
+        </h:form>
+    </h:body>
 
 </html>
