--- a/ethereum-rar-demo/src/main/webapp/gas-price.xhtml
+++ b/ethereum-rar-demo/src/main/webapp/gas-price.xhtml
@@ -4,62 +4,60 @@
       xmlns:h="http://java.sun.com/jsf/html"
       xmlns:eth="urn:be:e-contract:ethereum:jsf">
 
-    <f:view>
-        <h:head>
-            <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-            <meta http-equiv="Content-Script-Type" content="text/javascript" />
-            <meta http-equiv="Content-Style-Type" content="text/css" />
-            <meta http-equiv="Expires" content="-1" />
-            <meta http-equiv="Cache-Control"
-                  content="no-cache, no-store, max-age=0, must-revalidate" />
-            <meta http-equiv="Pragma" content="no-cache" />
-            <title>Ethereum Resource Adapter Demo Web Application</title>
-        </h:head>
+    <h:head>
+        <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+        <meta http-equiv="Content-Script-Type" content="text/javascript" />
+        <meta http-equiv="Content-Style-Type" content="text/css" />
+        <meta http-equiv="Expires" content="-1" />
+        <meta http-equiv="Cache-Control"
+              content="no-cache, no-store, max-age=0, must-revalidate" />
+        <meta http-equiv="Pragma" content="no-cache" />
+        <title>Ethereum Resource Adapter Demo Web Application</title>
+    </h:head>
 
-        <h:body>
-            <h1>Gas Prices</h1>
-            <h:messages errorStyle="color:red;" infoStyle="color:blue;"/>
-            <h:form>
-                <h:panelGrid columns="2">
-                    <h:outputText value="node gas price:"/>
-                    <h:outputText value="#{ethereumDemoGasPriceController.gasPrice}"/>
+    <h:body>
+        <h1>Gas Prices</h1>
+        <h:messages errorStyle="color:red;" infoStyle="color:blue;" globalOnly="true"/>
+        <h:form>
+            <h:panelGrid columns="2">
+                <h:outputText value="node gas price:"/>
+                <h:outputText value="#{ethereumDemoGasPriceController.gasPrice}"/>
 
-                    <h:outputText value="node gas price (gwei):"/>
-                    <h:outputText value="#{ethereumDemoGasPriceController.gasPrice}">
+                <h:outputText value="node gas price (gwei):"/>
+                <h:outputText value="#{ethereumDemoGasPriceController.gasPrice}">
+                    <eth:fromWei unit="GWEI"/>
+                </h:outputText>
+
+                <h:outputText value="maximum transaction duration:"/>
+                <h:inputText value="#{ethereumDemoGasPriceController.maxDuration}"/>
+            </h:panelGrid>
+            <h:dataTable value="#{ethereumDemoGasPriceController.gasPrices}" var="gasPriceEntry">
+                <h:column>
+                    <f:facet name="header">
+                        Oracle
+                    </f:facet>
+                    <h:outputText value="#{gasPriceEntry.oracle}"/>
+                </h:column>
+                <h:column>
+                    <f:facet name="header">
+                        Price
+                    </f:facet>
+                    <h:outputText value="#{gasPriceEntry.gasPrice}"/>
+                </h:column>
+                <h:column>
+                    <f:facet name="header">
+                        Price (gwei)
+                    </f:facet>
+                    <h:outputText value="#{gasPriceEntry.gasPrice}">
                         <eth:fromWei unit="GWEI"/>
                     </h:outputText>
-
-                    <h:outputText value="maximum transaction duration:"/>
-                    <h:inputText value="#{ethereumDemoGasPriceController.maxDuration}"/>
-                </h:panelGrid>
-                <h:dataTable value="#{ethereumDemoGasPriceController.gasPrices}" var="gasPriceEntry">
-                    <h:column>
-                        <f:facet name="header">
-                            Oracle
-                        </f:facet>
-                        <h:outputText value="#{gasPriceEntry.oracle}"/>
-                    </h:column>
-                    <h:column>
-                        <f:facet name="header">
-                            Price
-                        </f:facet>
-                        <h:outputText value="#{gasPriceEntry.gasPrice}"/>
-                    </h:column>
-                    <h:column>
-                        <f:facet name="header">
-                            Price (gwei)
-                        </f:facet>
-                        <h:outputText value="#{gasPriceEntry.gasPrice}">
-                            <eth:fromWei unit="GWEI"/>
-                        </h:outputText>
-                    </h:column>
-                </h:dataTable>
-                <h:panelGrid columns="2">
-                    <h:commandButton value="Refresh" action="#{ethereumDemoGasPriceController.refresh}"/>
-                    <h:commandButton value="Back" action="/index" immediate="true"/>
-                </h:panelGrid>
-            </h:form>
-        </h:body>
-    </f:view>
+                </h:column>
+            </h:dataTable>
+            <h:panelGrid columns="2">
+                <h:commandButton value="Refresh" action="#{ethereumDemoGasPriceController.refresh}"/>
+                <h:commandButton value="Back" action="/index" immediate="true"/>
+            </h:panelGrid>
+        </h:form>
+    </h:body>
 
 </html>
