--- a/ethereum-rar-demo/src/main/webapp/keys/index.xhtml
+++ b/ethereum-rar-demo/src/main/webapp/keys/index.xhtml
@@ -3,43 +3,41 @@
       xmlns:f="http://java.sun.com/jsf/core"
       xmlns:h="http://java.sun.com/jsf/html">
 
-    <f:view>
-        <h:head>
-            <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-            <meta http-equiv="Content-Script-Type" content="text/javascript" />
-            <meta http-equiv="Content-Style-Type" content="text/css" />
-            <meta http-equiv="Expires" content="-1" />
-            <meta http-equiv="Cache-Control"
-                  content="no-cache, no-store, max-age=0, must-revalidate" />
-            <meta http-equiv="Pragma" content="no-cache" />
-            <title>Ethereum Resource Adapter Demo Web Application</title>
-        </h:head>
+    <h:head>
+        <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+        <meta http-equiv="Content-Script-Type" content="text/javascript" />
+        <meta http-equiv="Content-Style-Type" content="text/css" />
+        <meta http-equiv="Expires" content="-1" />
+        <meta http-equiv="Cache-Control"
+              content="no-cache, no-store, max-age=0, must-revalidate" />
+        <meta http-equiv="Pragma" content="no-cache" />
+        <title>Ethereum Resource Adapter Demo Web Application</title>
+    </h:head>
 
-        <h:body>
-            <h1>In-memory keys</h1>
-            <h:form>
-                <h:messages errorStyle="color:red;" infoStyle="color:blue;"/>
-                <h:dataTable value="#{ethereumDemoKeysController.keys}" var="address">
-                    <h:column>
-                        <f:facet name="header">
-                            Address
-                        </f:facet>
-                        <h:outputText value="#{address}"/>
-                    </h:column>
-                    <h:column>
-                        <h:commandButton value="Balance" action="#{ethereumDemoKeysController.getBalance(address)}"/>
-                        <h:commandButton value="Transaction" action="#{ethereumDemoKeysController.initTransaction(address)}"/>
-                        <h:commandButton value="Deploy Demo Contract" action="#{ethereumDemoKeysController.deployDemoContract(address)}"/>
-                        <h:commandButton value="Invoke Demo Contract" action="#{ethereumDemoKeysController.initInvokeDemoContract(address)}"/>
-                        <h:commandButton value="Read Demo Contract" action="#{ethereumDemoKeysController.initReadDemoContract(address)}"/>
-                    </h:column>
-                </h:dataTable>
-                <h:panelGrid columns="2">
-                    <h:commandButton value="New" action="#{ethereumDemoKeysController.newKey}"/>
-                    <h:commandButton value="Back" action="/index"/>
-                </h:panelGrid>
-            </h:form>
-        </h:body>
-    </f:view>
+    <h:body>
+        <h1>In-memory keys</h1>
+        <h:form>
+            <h:messages errorStyle="color:red;" infoStyle="color:blue;" globalOnly="true"/>
+            <h:dataTable value="#{ethereumDemoKeysController.keys}" var="address">
+                <h:column>
+                    <f:facet name="header">
+                        Address
+                    </f:facet>
+                    <h:outputText value="#{address}"/>
+                </h:column>
+                <h:column>
+                    <h:commandButton value="Balance" action="#{ethereumDemoKeysController.getBalance(address)}"/>
+                    <h:commandButton value="Transaction" action="#{ethereumDemoKeysController.initTransaction(address)}"/>
+                    <h:commandButton value="Deploy Demo Contract" action="#{ethereumDemoKeysController.deployDemoContract(address)}"/>
+                    <h:commandButton value="Invoke Demo Contract" action="#{ethereumDemoKeysController.initInvokeDemoContract(address)}"/>
+                    <h:commandButton value="Read Demo Contract" action="#{ethereumDemoKeysController.initReadDemoContract(address)}"/>
+                </h:column>
+            </h:dataTable>
+            <h:panelGrid columns="2">
+                <h:commandButton value="New" action="#{ethereumDemoKeysController.newKey}"/>
+                <h:commandButton value="Back" action="/index"/>
+            </h:panelGrid>
+        </h:form>
+    </h:body>
 
 </html>
