update to latest web3j

--- a/ethereum-rar-demo/src/main/webapp/confirm/transaction.xhtml
+++ b/ethereum-rar-demo/src/main/webapp/confirm/transaction.xhtml
@@ -32,7 +32,7 @@
             <h:outputText value="from:"/>
             <h:outputText value="#{ethereumDemoConfirmController.transactionConfirmation.transactionReceipt.from}"/>
 
-            <h:outputText value="gas used:"/>
+            <h:outputText value="gas used (wei):"/>
             <h:outputText value="#{ethereumDemoConfirmController.transactionConfirmation.transactionReceipt.gasUsed}"/>
 
             <h:outputText value="gas used (gwei):"/>
