--- a/ethereum-rar-demo/src/main/webapp/gas-price.xhtml
+++ b/ethereum-rar-demo/src/main/webapp/gas-price.xhtml
@@ -20,7 +20,7 @@
         <h:messages errorStyle="color:red;" infoStyle="color:blue;" globalOnly="true"/>
         <h:form>
             <h:panelGrid columns="2">
-                <h:outputText value="node gas price:"/>
+                <h:outputText value="node gas price (wei):"/>
                 <h:outputText value="#{ethereumDemoGasPriceController.gasPrice}"/>
 
                 <h:outputText value="node gas price (gwei):"/>
