--- a/ethereum-rar-demo/src/main/webapp/info.xhtml
+++ b/ethereum-rar-demo/src/main/webapp/info.xhtml
@@ -27,6 +27,9 @@
                 <h:outputText value="Protocol version:"/>
                 <h:outputText value="#{ethereumDemoInfoController.protocolVersion}"/>
 
+                <h:outputText value="Chain Id:"/>
+                <h:outputText value="#{ethereumDemoInfoController.chainId}"/>
+
                 <h:outputText value="Peer count:"/>
                 <h:outputText value="#{ethereumDemoInfoController.peerCount}"/>
 
