--- a/ethereum-rar-demo/src/main/webapp/accounts/balance.xhtml
+++ b/ethereum-rar-demo/src/main/webapp/accounts/balance.xhtml
@@ -25,7 +25,7 @@
                 <eth:checksumAddress/>
             </h:outputText>
 
-            <h:outputText value="Balance"/>
+            <h:outputText value="Balance (wei)"/>
             <h:outputText value="#{ethereumDemoAccountController.selectedAccountBalance}"/>
 
             <h:outputText value="Balance (ether)"/>
