--- a/ethereum-rar-demo/src/main/webapp/index.xhtml
+++ b/ethereum-rar-demo/src/main/webapp/index.xhtml
@@ -18,6 +18,7 @@
         <h:form>
             <h:panelGrid columns="1">
                 <h:commandButton value="Information" action="/info"/>
+                <h:commandButton value="Admin Object" action="/admin"/>
                 <h:commandButton value="Get Gas Price" action="/gas-price"/>
                 <h:commandButton value="Send Raw Transaction" action="/raw/index"/>
                 <h:commandButton value="Get Transaction Confirmation" action="/confirm/index"/>
